Change Log for OpenXava project
===============================

- Welcome page on starting OpenXava Studio simplified.
- Fix: @ReadOnly ignored when using inside sections or groups with view inheritance.
- Getting Started guide in English includes video. 
- Fix: Adding an element in a recursive collection that is also inside another collection fails.
- Fix: @ReadOnly collections data not visible with Dark theme.
- Fix: base.css is not refreshed by browser after updating OpenXava version.
- Fix: File name for PDF generation and CSV export not encoded, so sometimes local characters are missed.
- Fix: PDF reports do not work with Cp1250 encoding used by some Central and Eastern European languages.
- Database configuration documentation improved.
- Fix: Model name not translated in creation messages when key is included in the message.
- Fix: @Calculation properties does not include thousand separators just after being calculated.
- Fix: New action does not clear combo value on references with @DescriptionsList(showReferenceView=true).
- Fix: @DescriptionsList(showReferenceView=true) does not refresh combo value navigating between records.
- Fix: @AssertTrue throws error if has a message with a property with null value.

OpenXava 6.5.2 (2021-5-31)
--------------------------
- Use of 4 digits for year in dates for all locales. 
- 'How to' documentation improved. 
- Oracle configuration documentation improved.
- Concurrency and version property documentation improved.
- Documentation to modify and build OpenXava code improved.
- Fix: Adding date separators and completing century in year only work for first date in view.
- Fix: Date calendar and rich text editor do not change the language when xava.portal.locale is changed.
- Fix: When locale is changed via code (xava.portal.locale) the link for help documentation is not updated.
- Fix: Modules in left menu in incorrect language when you change locale from code (xava.portal.locale).