@@ -1,34 +1,2 @@
 /*C3*/SET SCHEMA PUBLIC
 DISCONNECT
-/*C5*/SET SCHEMA PUBLIC
-DISCONNECT
-/*C6*/SET SCHEMA PUBLIC
-DISCONNECT
-/*C7*/SET SCHEMA PUBLIC
-DISCONNECT
-/*C8*/SET SCHEMA PUBLIC
-DISCONNECT
-/*C9*/SET SCHEMA PUBLIC
-DISCONNECT
-/*C10*/SET SCHEMA PUBLIC
-DISCONNECT
-/*C11*/SET SCHEMA PUBLIC
-DISCONNECT
-/*C12*/SET SCHEMA PUBLIC
-DISCONNECT
-/*C4*/SET SCHEMA XAVATEST
-INSERT INTO APPLICANT VALUES('Applicant','4028b8817a19199e017a1926584d0000','JUNIT APPLICANT CREATED',NULL,NULL)
-COMMIT
-DELETE FROM APPLICANT WHERE ID='4028b8817a19199e017a1926584d0000'
-COMMIT
-INSERT INTO APPLICANT VALUES('Applicant','4028b8817a19199e017a19267ba10001','PEPITO CREATED',NULL,NULL)
-COMMIT
-DELETE FROM APPLICANT WHERE ID='4028b8817a19199e017a19267ba10001'
-INSERT INTO APPLICANT VALUES('Applicant','4028b8817a19199e017a19267ba10001','PEPITO',NULL,NULL)
-COMMIT
-DELETE FROM APPLICANT WHERE ID='4028b8817a19199e017a19267ba10001'
-COMMIT
-/*C13*/SET SCHEMA PUBLIC
-DISCONNECT
-/*C14*/SET SCHEMA PUBLIC
-DISCONNECT
