@@ -1,6 +1,7 @@
 Change Log for OpenXava project
 ===============================
 
+- Fix: Date editor does not work well when locale format has the year at beginning, like in South Africa.
 - Welcome page on starting OpenXava Studio simplified.
 - Fix: @ReadOnly ignored when using inside sections or groups with view inheritance.
 - Getting Started guide in English includes video. 
